--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -35,21 +35,21 @@ Resources:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: CPMMachine/CPMSetLocalServiceLog
     DeletionPolicy: Retain
-  PSMCfnInitLogStreamLog:
+  PSMUserDataLogStream:
     Type: AWS::Logs::LogStream
     Condition: CreatePSMCondition
     Properties:
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: PSMMachine/PSMCfnInitLogStreamLog
+      LogStreamName: PSMMachine/UserDataLog
     DeletionPolicy: Retain
-  PSMConfigurationsLog:
+  PSMConfigurationsLogStream:
     Type: AWS::Logs::LogStream
     Condition: CreatePSMCondition
     Properties:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: PSMMachine/PSMConfigurationsLog
     DeletionPolicy: Retain
-  PSMRegistrationLog:
+  PSMRegistrationLogStream:
     Type: AWS::Logs::LogStream
     Condition: CreatePSMCondition
     Properties:
@@ -470,108 +470,122 @@ Resources:
           - !Ref PSMAmi
           - !Ref ComponentCustomAmi
       InstanceType: !Ref ComponentInstanceType
-      UserData: !Base64
-        'Fn::Sub': >-
-          <script>
-
-          cfn-init.exe -v -s ${AWS::StackId} -r PSMMachine --configsets
-          ascending --region ${AWS::Region}
-
-          </script>
+      UserData:
+        Fn::Base64: !Sub
+          - |
+            <powershell>
+            $UserDataParams = @{
+              "Region"                        = "${AWS::Region}"
+              "LogGroup"                      = "${LogGroup}"
+              "UserDataLogStream"             = "${PSMUserDataLogStream}"
+              "PSMConfigurationsLogStream"    = "${PSMConfigurationsLogStream}"
+              "PSMRegistrationLogStream"      = "${PSMRegistrationLogStream}"
+              "VaultAdminUser"                = "${VaultAdminUser}"
+              "SSMAdminPassParameterID"       = "${StoreAdminPassword.SsmId}"
+              "VaultPrivateIP"                = "${VaultIpAddress}"
+              "ComponentHostname"             = "${ComponentHostname}"
+              "StackName"                     = "${AWS::StackName}"
+            }
+            C:\CyberArk\Deployment\UserDataScript.ps1 @UserDataParams
+            </powershell>
+          - VaultIpAddress: !If
+              - DRValueEmpty
+              - !Sub '${VaultPrivateIP}'
+              - !Sub '${VaultPrivateIP},${DRPrivateIP}'
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
-    Metadata:
-      'AWS::CloudFormation::Init':
-        configSets:
-          ascending:
-            - configSSMAndHostname
-            - configServices
-            - configSignal
-        configSSMAndHostname:
-          services:
-            windows:
-              AmazonSSMAgent:
-                enabled: true
-                ensureRunning: true
-                files:
-                  - >-
-                    C:\Program
-                    Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
-          commands:
-            1-cloudwatch:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
-                -LogGroup ${LogGroup} -PSMCfnInitLogStream
-                ${PSMCfnInitLogStreamLog} -PSMConfiguration
-                ${PSMConfigurationsLog} -PSMRegistration ${PSMRegistrationLog}
-                -Region ${AWS::Region}
-            2-downloadLatestSSM:
-              command: >
-                powershell.exe -Command
-                [Net.ServicePointManager]::SecurityProtocol =
-                [Net.SecurityProtocolType]::Tls12; Invoke-WebRequest
-                "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe"
-                -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe"
-                -UseBasicParsing
-              waitAfterCompletion: 0
-              ignoreErrors: true
-            3-updateLatestSSM:
-              command: >
-                powershell.exe -Command Start-Process -FilePath
-                $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S"
-                -Wait
-              waitAfterCompletion: 0
-              ignoreErrors: true
-            4-removeLatestSSM:
-              command: >
-                powershell.exe -Command rm -Force
-                $env:USERPROFILE\Desktop\SSMAgent_latest.exe
-              waitAfterCompletion: 0
-              ignoreErrors: true
-            5-restartSSM:
-              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: 60
-              ignoreErrors: true
-            6-addDNSSuffix:
-              command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
-        configServices:
-          commands:
-            1-configuration:
-              command: !Sub
-                - >-
-                  powershell.exe -File
-                  C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
-                  ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
-                  1858
-                - VaultIpAddress: !If
-                    - DRValueEmpty
-                    - !Sub '${VaultPrivateIP}'
-                    - !Sub '${VaultPrivateIP},${DRPrivateIP}'
-              waitAfterCompletion: 0
-            2-registration:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\PSMRegistration.ps1
-                -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
-                ${StoreAdminPassword.SsmId}
-              waitAfterCompletion: 0
-            3-PSMserviceConfig:
-              command: sc config "CyberArk Privileged Session Manager" start=auto
-              waitAfterCompletion: 0
-            4-ChangeHostname:
-              command: !Sub >
-                powershell.exe -Command Rename-Computer -NewName
-                ${ComponentHostname} -Force -Restart
-              waitAfterCompletion: forever
-        configSignal:
-          commands:
-            0-signalCompletion:
-              command: !Sub >
-                "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource PSMMachine --region ${AWS::Region}
-              waitAfterCompletion: 0
+    # Metadata:
+    #   'AWS::CloudFormation::Init':
+    #     configSets:
+    #       ascending:
+    #         - configSSMAndHostname
+    #         - configServices
+    #         - configSignal
+    #     configSSMAndHostname:
+    #       services:
+    #         windows:
+    #           AmazonSSMAgent:
+    #             enabled: true
+    #             ensureRunning: true
+    #             files:
+    #               - >-
+    #                 C:\Program
+    #                 Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
+    #       commands:
+    #         1-cloudwatch:
+    #           command: !Sub >
+    #             powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
+    #             -LogGroup ${LogGroup} -PSMCfnInitLogStream
+    #             ${PSMCfnInitLogStreamLog} -PSMConfiguration
+    #             ${PSMConfigurationsLog} -PSMRegistration ${PSMRegistrationLog}
+    #             -Region ${AWS::Region}
+    #         2-downloadLatestSSM:
+    #           command: >
+    #             powershell.exe -Command
+    #             [Net.ServicePointManager]::SecurityProtocol =
+    #             [Net.SecurityProtocolType]::Tls12; Invoke-WebRequest
+    #             "https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/windows_amd64/AmazonSSMAgentSetup.exe"
+    #             -OutFile "$env:USERPROFILE\Desktop\SSMAgent_latest.exe"
+    #             -UseBasicParsing
+    #           waitAfterCompletion: 0
+    #           ignoreErrors: true
+    #         3-updateLatestSSM:
+    #           command: >
+    #             powershell.exe -Command Start-Process -FilePath
+    #             $env:USERPROFILE\Desktop\SSMAgent_latest.exe -ArgumentList "/S"
+    #             -Wait
+    #           waitAfterCompletion: 0
+    #           ignoreErrors: true
+    #         4-removeLatestSSM:
+    #           command: >
+    #             powershell.exe -Command rm -Force
+    #             $env:USERPROFILE\Desktop\SSMAgent_latest.exe
+    #           waitAfterCompletion: 0
+    #           ignoreErrors: true
+    #         5-restartSSM:
+    #           command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
+    #           waitAfterCompletion: 60
+    #           ignoreErrors: true
+    #         6-addDNSSuffix:
+    #           command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
+    #     configServices:
+    #       commands:
+    #         1-configuration:
+    #           command: !Sub
+    #             - >-
+    #               powershell.exe -File
+    #               C:\CyberArk\Deployment\PSMConfiguration.ps1 -VaultIpAddress
+    #               ${VaultIpAddress} -VaultAdminUser ${VaultAdminUser} -VaultPort
+    #               1858
+    #             - VaultIpAddress: !If
+    #                 - DRValueEmpty
+    #                 - !Sub '${VaultPrivateIP}'
+    #                 - !Sub '${VaultPrivateIP},${DRPrivateIP}'
+    #           waitAfterCompletion: 0
+    #         2-registration:
+    #           command: !Sub >
+    #             powershell.exe -File C:\CyberArk\Deployment\PSMRegistration.ps1
+    #             -VaultAdminUser ${VaultAdminUser} -SSMAdminPassParameterID
+    #             ${StoreAdminPassword.SsmId}
+    #           waitAfterCompletion: 0
+    #         3-PSMserviceConfig:
+    #           command: sc config "CyberArk Privileged Session Manager" start=auto
+    #           waitAfterCompletion: 0
+    #         4-ChangeHostname:
+    #           command: !Sub >
+    #             powershell.exe -Command Rename-Computer -NewName
+    #             ${ComponentHostname} -Force -Restart
+    #           waitAfterCompletion: forever
+    #     configSignal:
+    #       commands:
+    #         0-signalCompletion:
+    #           command: !Sub >
+    #             "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource PSMMachine --region ${AWS::Region}
+    #           waitAfterCompletion: 0
     Condition: CreatePSMCondition
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT25M
+        Timeout: PT10M
     DeletionPolicy: Retain
   PSMPMachine:
     Type: AWS::EC2::Instance
